--- a/visualization/index.html
+++ b/visualization/index.html
@@ -5,10 +5,10 @@
     <style type="text/css">
 
         html, body {
-          margin: 0; /* äußeren Abstand / Rand auf zurücksetzen */
-          padding: 0; /* inneren Abstand zurücksetzen */
-          height: 100%; /* Seite soll über volle Höhe gehen */
-          color: #aaa; /* graue Textfarbe */
+          margin: 0;
+          padding: 0;
+          height: 100%;
+          color: #aaa;
         }
 
 
